Add admin styles for plugin main columns

--- a/assets/css/fantastic-slideshow-admin-styles.css
+++ b/assets/css/fantastic-slideshow-admin-styles.css
@@ -1,6 +1,8 @@
 
 /*WordPress Admin styling customization for this plugin.*/
-
+.fantastic-slideshow__plugin-title { padding-top: 5px; padding-bottom: 15px; font-size: 23px; font-weight: 400; }
+.fantastic-slideshow__instructions { display: inline-block; padding: 2px 15px; margin-top: 15px; border: 1px solid #ccd0d4; background-color: #ffffff; }
+.fantastic-slideshow__instructions__intro { padding-bottom: 25px; }
 
 
 @media only screen and (min-width: 700px){
