--- a/assets/css/fantastic-slideshow-admin-styles.css
+++ b/assets/css/fantastic-slideshow-admin-styles.css
@@ -5,6 +5,11 @@
 .fantastic-slideshow__instructions__intro { padding-bottom: 25px; }
 
 
+.admin-input-container { padding-bottom: 15px; }
+.admin-input-container__label { display: inline-block; width: 300px; }
+
+
+
 @media only screen and (min-width: 700px){
 
 }
