--- a/assets/css/fantastic-slideshow-admin-styles.css
+++ b/assets/css/fantastic-slideshow-admin-styles.css
@@ -6,7 +6,9 @@
 
 
 .admin-input-container { padding-bottom: 20px; }
-.admin-input-container__label { display: inline-block; width: 300px; }
+.admin-input-container__default-settings-text { padding-left: 15px; font-style: italic; }
+.admin-input-container__label { display: block; padding-bottom: 4px; }
+.admin-input-container__input { display: inline-block; width: 100%; }
 
 
 
@@ -17,5 +19,8 @@
 
 
 @media only screen and (min-width: 1200px){
+    
+    .admin-input-container__label { display: inline-block; width: 250px; padding-right: 20px; padding-bottom: 0; }
+    .admin-input-container__input { width: 200px; }
     
 }
