--- a/assets/css/fantastic-slideshow-admin-styles.css
+++ b/assets/css/fantastic-slideshow-admin-styles.css
@@ -1,5 +1,6 @@
 
 /*WordPress Admin styling customization for this plugin.*/
+/*Settings page*/
 .fantastic-slideshow__plugin-title { padding-top: 5px; padding-bottom: 15px; font-size: 23px; font-weight: 400; }
 .fantastic-slideshow__instructions { display: inline-block; padding: 2px 15px; margin-top: 15px; border: 1px solid #ccd0d4; background-color: #ffffff; }
 .fantastic-slideshow__instructions__intro { padding-bottom: 25px; }
@@ -11,6 +12,11 @@
 .admin-input-container__input { display: inline-block; width: 100%; }
 
 
+/*General*/
+#normal-sortables input:not([type=radio]),
+#normal-sortables textarea { width: 100%; max-width: 400px; }
+
+
 
 @media only screen and (min-width: 700px){
 
@@ -20,6 +26,7 @@
 
 @media only screen and (min-width: 1200px){
     
+    /*Settings page*/
     .admin-input-container__label { display: inline-block; width: 250px; padding-right: 20px; padding-bottom: 0; }
     .admin-input-container__input { width: 200px; }
     
