Move featured image higher up left column

--- a/assets/css/fantastic-slideshow-admin-styles.css
+++ b/assets/css/fantastic-slideshow-admin-styles.css
@@ -13,6 +13,9 @@
 .admin-input-container__input { display: inline-block; width: 100%; }
 
 
+#postimagediv { max-width: 400px; }
+
+
 /*General*/
 #normal-sortables input:not([type=radio]),
 #normal-sortables textarea { width: 100%; max-width: 400px; }
